--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
     <label for="no">Nő</label><br>
     Életkor<br>
     <input type="number" id="eletkor"><button onclick="Katt()">OK</button> 
+    <div id="kiir">
+        
+    </div>
 </body>
 </html>
+
+<script src="assets/js/main.js"></script>
